revert dc9f72c with font fix for android. need to test on iOS

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -8,6 +8,13 @@ pre {
   font-family: var(--code-font);
 }
 
+.lean {
+  code,
+  pre {
+    font-family: var(--code-font-lean);
+  }
+}
+
 code {
   font-size: 85%;
   padding: 0.25rem;
